syntax = "proto3";

package helloworld;

service Greeter {
    // 双方向ストリーミング
    rpc Chat (stream MyMessage) returns (stream MyMessage);
}

// 送受信したい 4 種類のメッセージを個別定義
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message SecondRequest {
  string payload = 1;
}

message SecondResponse {
  string message = 1;
}

// ↑の4つをラップする共用体メッセージ
message MyMessage {
  oneof msg {
    HelloRequest   hello_request   = 1;
    HelloResponse  hello_response  = 2;
    SecondRequest  second_request  = 3;
    SecondResponse second_response = 4;
  }
}
